src/snapshots/pdm__ui__tests__bitcoin_status_screen_render.snap
---
source: src/ui.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 24 },
        content: [
            "┌ PDM ──────────────────┐┌ Info ───────────────────────────────────────────────┐",
            "│Home                   ││ Chain Info │ Peers                                  │",
            "│Bitcoin Status         ││                                                     │",
            "│P2Pool Config          │└─────────────────────────────────────────────────────┘",
            "│P2Pool Status          │┌ Chain Info ─────────────────────────────────────────┐",
            "│LN Config              ││Select a P2Poolv2 config file to load Bitcoin Core   │",
            "│LN Status              ││chain info.                                          │",
            "│Shares Market          ││                                                     │",
            "│Settings               ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
            " ↑↓  Navigate sidebar   ←→  Switch tab   q  Quit                                ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 27, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 37, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 2, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 76, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 26, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
            x: 37, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 4, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 23, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 27, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 40, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 43, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 50, y: 23, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
