src/snapshots/pdm__ui__tests__ln_status_screen_render.snap
---
source: src/ui.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 24 },
        content: [
            "┌ PDM ──────────────────┐┌ LN Status ──────────────────────────────────────────┐",
            "│Home                   ││LN Status                                            │",
            "│Bitcoin Status         ││                                                     │",
            "│P2Pool Config          ││                                                     │",
            "│P2Pool Status          ││                                                     │",
            "│LN Config              ││                                                     │",
            "│LN Status              ││                                                     │",
            "│Shares Market          ││                                                     │",
            "│Settings               ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
            " ↑↓  Navigate sidebar   Enter  Select   q  Quit                                 ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 4, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 23, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 30, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 39, y: 23, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 42, y: 23, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 49, y: 23, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
