src/snapshots/pdm__ui__tests__p2pool_screen_render.snap
---
source: src/ui.rs
expression: terminal.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 20 },
        content: [
            "┌ PDM ──────────────────┐┌ Info ───────────────────────────────────────────────┐",
            "│Home                   ││ Chain Info │ System │ Logs │ Peers                  │",
            "│Bitcoin Status         │└─────────────────────────────────────────────────────┘",
            "│P2Pool Config          │┌─────────────────────────────────────────────────────┐",
            "│P2Pool Status          ││Chain Info                                           │",
            "│Settings               ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "│                       ││                                                     │",
            "└───────────────────────┘└─────────────────────────────────────────────────────┘",
            " ↑↓  Navigate sidebar   ←→  Switch tab   q  Quit                                ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 27, y: 1, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 37, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 3, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
            x: 24, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 0, y: 19, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 4, y: 19, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 23, y: 19, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 27, y: 19, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 40, y: 19, fg: White, bg: DarkGray, underline: Reset, modifier: NONE,
            x: 43, y: 19, fg: DarkGray, bg: Black, underline: Reset, modifier: NONE,
            x: 50, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 80, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
